fix center alignment of image mobile

--- a/style/style-crew.css
+++ b/style/style-crew.css
@@ -227,7 +227,8 @@ label span:hover {
 
   .crew-img img {
     object-fit: contain;
-    max-height: 25vh;
+    max-height: 30vh;
+    margin: auto;
   }
 
   .carousel-labels {
